Fixed paths and updated README

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				$missingScreen.hide();
 				$brokenScreen.hide();
 
-				u.initPlugin(jQuery(".unityPlayer")[0], "../games/forest.unity3d");
+				u.initPlugin(jQuery(".unityPlayer")[0], "games/forest.unity3d");
 
 			});
 
