--- a/template.html
+++ b/template.html
@@ -56,7 +56,7 @@
 						break;
 					}
 				});
-				u.initPlugin(jQuery("#unityPlayer")[0], "Forest.unity3d");
+				u.initPlugin(jQuery("#unityPlayer")[0], "games/forest.unity3d");
 			});
 		-->
 		</script>
